# chatbot-test-1

./: .gitignore  Chatbot.py  load.py  pyproject.toml  requirements.txt
chroma/: chroma.sqlite3
